Fix teardown in Web*LayerImpl, and add tests for Web*Layer https://bugs.webkit.org/show_bug.cgi?id=70431

Patch by Antoine Labour <piman@chromium.org> on 2011-10-25
Reviewed by James Robinson.

* src/WebContentLayerImpl.cpp:
(WebKit::WebContentLayerImpl::~WebContentLayerImpl):
* src/WebExternalTextureLayerImpl.cpp:
(WebKit::WebExternalTextureLayerImpl::~WebExternalTextureLayerImpl):
* src/WebLayerImpl.cpp:
(WebKit::WebLayerImpl::~WebLayerImpl):

Canonical link: https://commits.webkit.org/87051@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@98393 268f45cc-cd09-0410-ab3c-d52691b4dbfc