Source/WebKit/chromium/src/WebExternalTextureLayerImpl.cpp
@@ -48,6 +48,7 @@ WebExternalTextureLayerImpl::WebExternalTextureLayerImpl(WebLayerClient* client)
 
 WebExternalTextureLayerImpl::~WebExternalTextureLayerImpl()
 {
+    setDelegate(0);
 }
 
 bool WebExternalTextureLayerImpl::drawsContent() const
