third_party/WebKit/Source/WebKit/chromium/src/WebContentLayerImpl.cpp
@@ -55,11 +55,13 @@ WebContentLayerImpl::WebContentLayerImpl(WebLayerClient* client, WebContentLayer
 
 WebContentLayerImpl::~WebContentLayerImpl()
 {
+    setDelegate(0);
 }
 
 void WebContentLayerImpl::setDrawsContent(bool drawsContent)
 {
     m_drawsContent = drawsContent;
+    setNeedsCommit();
 }
 
 bool WebContentLayerImpl::drawsContent() const
