Source/WebKit/chromium/WebKit.gypi
@@ -81,6 +81,7 @@
             'tests/TreeTestHelpers.h',
             'tests/WebCompositorImplTest.cpp',
             'tests/WebFrameTest.cpp',
+            'tests/WebLayerTest.cpp',
             'tests/WebURLRequestTest.cpp',
             'tests/WebViewTest.cpp',
         ],
